WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273070
[WebGPU]
https://philogb.github.io/page/indraspearls/
fails to compile shader
https://bugs.webkit.org/show_bug.cgi?id=273070
Summary
[WebGPU] https://philogb.github.io/page/indraspearls/ fails to compile shader
Mike Wyrzykowski
Reported
2024-04-22 09:26:02 PDT
Created
attachment 471041
[details]
WGSL source Site is using something like: for (var i = 0; i < 250; i++) @diagnostic(off,derivative_uniformity) { which we don't parse 1 error generated while compiling the shader: 307:38: Expected a {, but got a @ Attaching full WGSL source
Attachments
WGSL source
(51.59 KB, text/plain)
2024-04-22 09:26 PDT
,
Mike Wyrzykowski
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-22 09:26:20 PDT
<
rdar://problem/126865140
>
Tadeu Zagallo
Comment 2
2024-05-10 12:21:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28400
EWS
Comment 3
2024-05-13 03:43:26 PDT
Committed
278682@main
(1d59f80ecec0): <
https://commits.webkit.org/278682@main
> Reviewed commits have been landed. Closing PR #28400 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug